Make slight changes to home section Create service section Issue with horizontal scroll in services section needs fix

--- a/css/style.css
+++ b/css/style.css
@@ -70,15 +70,26 @@ nav{
     width: 41.67vw;
 }
 
+.firstCol{
+    /* background-color: blue; */
+    display: flex;
+}
+
+.slide{
+    margin: auto;
+}
+
 .secondCol{
+    /* background-color: azure; */
     display: flex;
     flex-direction: column;
 
     width: 48vw;
-    /* height: 64vh; */
+    height: 64vh;
 }
 
 .innerText{
+    /* background-color: antiquewhite; */
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -99,9 +110,14 @@ nav{
     text-align: center;margin: 0;
 }
 
-.moreIcon{
+.moreIconBtnArea{
     margin: 1.5rem auto auto auto;
     transform: rotate(90deg);
+    overflow: hidden;
+}
+
+.moreIcon{
+    overflow: hidden;
 
     width: 3rem;
     height: 3rem;
